tests/semantic/invalid/variable_undefined.c
/*
 * Multi-line comment.
 */

int32_t a = b;